# finalprojectCS50x

./: .env  .gitignore  README.md  adjectives.txt  app.py  carbon.db  helpers.py  nouns.txt  nounts.txt  pyproject.toml  requirements.txt  sendgrid.env
static/: database_visualization.md  styles.css
templates/: about.html  account.html  activity.html  calculator.html  calculatorconsumption.html  calculatorconsumptionupdate.html  calculatortransport.html  challenges.html  changename.html  changepassword.html  contact.html  footprint.html  history.html  home.html  homefirst.html  homeuser.html  howitworks.html  iconcolor.html  layout.html  leaderboard.html  leaderboardicon.html  login.html  logout.html  register.html  reset.html  results.html  tracker.html  trackercommunity.html  trackerelectricity.html  trackershopping.html  trackertransport.html  trackerweek.html  usernamegenerator.html
